src/snapshots/simple_llm_proxy__config__basic_remaps_no_match.snap
---
source: src/config.rs
expression: processed
---
remaps:
  - prefix: remote/
    provider: dummy
    base_url: "https://example.com/v1"
    api_key: sk-12345
    models:
      models: []
      model_map: {}
  - prefix: remote2/
    provider: dummy
    base_url: "https://example.com/v1"
    api_key: sk-12345
    models:
      models:
        - remote2/nofilter
      model_map:
        remote2/nofilter:
          base_url: "https://example.com/v1"
          api_key: sk-12345
          model: nofilter
auth_tokens: {}
config_models:
  models:
    - local/model
    - remote/model
  model_map:
    local/model:
      base_url: "http://localhost:8080/v1"
      api_key: ~
      model: whatever
    remote/model:
      base_url: "https://example.com/v1"
      api_key: sk-12345
      model: other-model
all_models:
  models:
    - local/model
    - remote/model
    - remote2/nofilter
  model_map:
    local/model:
      base_url: "http://localhost:8080/v1"
      api_key: ~
      model: whatever
    remote/model:
      base_url: "https://example.com/v1"
      api_key: sk-12345
      model: other-model
    remote2/nofilter:
      base_url: "https://example.com/v1"
      api_key: sk-12345
      model: nofilter
