src/snapshots/simple_llm_proxy__config__get_target_found-2.snap
---
source: src/config.rs
expression: "&processed.get_target(\"remote/model\").unwrap()"
---
base_url: "https://example.com/v1"
api_key: sk-12345
model: other-model
